# line-cook

./: .gitignore  Cargo.toml  README.md  flake.nix  pyproject.toml
docs/feature/: preperation.md  recipes-ingredients.md  todo-list.md
src/: handler.rs  main.rs  tools.rs
src/line_cook/: __init__.py
