[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "line-cook"
version = "0.1.0"
description = "An MCP to help with executing pieces-wise refactors and generations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "pydantic",
]

[project.scripts]
line-cook = "line_cook.server:main"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
